--- a/index.html
+++ b/index.html
@@ -1,59 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portofolio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
+    <title>Portfolio Website</title>
 </head>
 <body>
-<nav><img src="image/company-coffee-cup-logo-83FFFA726A-seeklogo.com.webp" width="170px" height="170px" alt="company-coffee-cup-logo-83FFFA726A-seeklogo">
-    <ul>
-        <li><a href="">Home</a></li>
-        <li><a href="">About</a></li>
-        <li><a href="">Work</a></li>
-        <li><a href="">Resume</a></li>
-        <li><a href="">Contact</a></li>
-    </ul>
-</nav>    
-</header>
-<main>
-<section>
-<h1>About</h1>
-<p>At Brew Bliss Coffee, we believe that every cup tells a story. From the handpicked beans sourced from sustainable farms to our artisan roasting process, we’re committed to delivering rich, bold flavors that inspire. Whether you're savoring a morning brew or fueling your creativity, Brew Bliss is crafted to elevate your coffee experience.</p>
-</section>
-<br>
-<section>
-<h2>Work</h2>
-<p>At Brew Bliss Coffee, we believe that every cup tells a story. From the handpicked beans sourced from sustainable farms to our artisan roasting process, we’re committed to delivering rich, bold flavors that inspire. Whether you're savoring a morning brew or fueling your creativity, Brew Bliss is crafted to elevate your coffee experience.</p>
-</section>
-<br>
-<section>
-<h2>Resume</h2>
-<p>Do you want to work with us? Send us your resume at careers@brewbliss.com and tell us how you can contribute to our mission of providing exceptional coffee experiences. We value creativity, commitment, and a passion for excellence.</p>
-</section>
-<br>
-<section>
-<h2>Contact</h2>
-<p>Contact Us At Our Email @CoffeSnShop </p>
-</section>
+    <header>
+        <a href="#" class="logo">Saliou Coding ®</a>
 
-</main>
+        <nav>
+            <a href="#" class="active"> Home</a>
+            <a href="#" >About</a>
+            <a href="#" >Work</a>
+            <a href="#" >Resume</a>
+            <a href="#" >Contact</a>
+        </nav>
+    </header>
+    <section class="home">
+        <div class="home-img">
+            <img src="image/main.jpg" alt="">
+        </div>
+        <div class="home-content">
+            <h1>Hi, It's <span>Saliou</span></h1>
+            <h3 class="typing-text">I'm a Web Dev<span></span></h3>
+            <p>"Hey there! I'm just getting started with web development, so I'm still learning the basics. I don’t know much yet, but I’m excited to keep improving and explore new things. Let's grow together!"</p>
+            <div class="social-icons">
+                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="#"><i class="fa-brands fa-github"></i></a>
+                <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            </div>
+            <a href="#" class="btn">Hire me</a>
+        </div>
+    </section>
+</body>
 </html>
-<form action="/ma-page-de-traitement" method="post">
-    <ul>
-      <li>
-        <label for="name">Nom&nbsp;:</label>
-        <input type="text" id="name" name="user_name" />
-      </li>
-      <li>
-        <label for="mail">E-mail&nbsp;:</label>
-        <input type="email" id="mail" name="user_mail" />
-      </li>
-      <li>
-        <label for="msg">Message&nbsp;:</label>
-        <textarea id="msg" name="user_message"></textarea>
-      </li>
-    </ul>
-    <button type-"Submit">Envoyer</button>
-  </form>
-  
